--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,8 @@
 # Delphi history and backups
 __history/
 __recovery/
+Win32/Debug/*.obj*
+Win32/Debug/*.obj
 *.~*
 
 # Castalia statistics file (since XE7 Castalia is distributed with Delphi)
